--- a/styles/style.scss
+++ b/styles/style.scss
@@ -4,10 +4,10 @@ $small: 800px;
 
 .wrapper {
   max-width: 1140px;
-  padding-left: 1rem;
-  padding-right: 1rem;
-  margin-left: auto;
   margin-right: auto;
+  margin-left: auto;
+  padding-right: 1rem;
+  padding-left: 1rem;
 }
 
 *,
@@ -36,8 +36,12 @@ body {
   display: flex;
   flex-direction: column;
   min-height: 100vh;
-  font-family: 'Roboto', sans-serif;
   background-color: #242121;
+  font-family: 'Roboto', sans-serif;
+}
+
+textarea {
+  font-family: 'Roboto', sans-serif;
 }
 
 main {
@@ -46,28 +50,30 @@ main {
 
 .sr-only {
   position: absolute;
+  overflow: hidden;
   clip: rect(1px, 1px, 1px, 1px);
+  width: 1px;
+  height: 1px;
   padding: 0;
   border: 0;
-  height: 1px;
-  width: 1px;
-  overflow: hidden;
 }
 
 .button {
-  appearance: none;
-  color: #fff;
-  background-color: #2fa0f6;
   min-width: 120px;
-  padding: 0.5rem 1rem;
-  border-radius: 5px;
+  padding: .5rem 1rem;
   text-align: center;
+  color: #fff;
+  border-radius: 5px;
+  background-color: #2fa0f6;
+
+  appearance: none;
 
   svg {
     display: inline-block;
-    vertical-align: middle;
     width: 24px;
     height: 24px;
+    vertical-align: middle;
+
     fill: #fff;
   }
 
@@ -82,12 +88,12 @@ main {
 
 .button--icon {
   min-width: initial;
-  padding: 0.5rem;
+  padding: .5rem;
 }
 
 .brand {
-  font-weight: bold;
   font-size: 20px;
+  font-weight: bold;
 }
 
 .site-header {
@@ -111,8 +117,8 @@ main {
 
 .site-header__wrapper {
   display: flex;
-  justify-content: space-between;
   align-items: center;
+  justify-content: space-between;
   padding-top: 1rem;
   padding-bottom: 1rem;
 
@@ -129,27 +135,27 @@ main {
 
   @media (max-width: $small - 1) {
     position: absolute;
+    z-index: -1;
     top: calc(100% + 35px);
     right: 0;
     left: 0;
-    z-index: -1;
-    background-color: #373737;
     visibility: hidden;
-    opacity: 0;
+    transition: transform .3s ease-out, opacity .3s ease-out;
     transform: translateY(-100%);
-    transition: transform 0.3s ease-out, opacity 0.3s ease-out;
+    opacity: 0;
+    background-color: #373737;
 
     &.active {
       visibility: visible;
-      opacity: 1;
       transform: translateY(0);
+      opacity: 1;
     }
   }
 }
 
 .nav__item {
   &:not(:last-child) {
-    margin-right: 0.5rem;
+    margin-right: .5rem;
   }
 
   a {
@@ -161,8 +167,8 @@ main {
 
     @media (min-width: $small) {
       text-align: center;
-      border-left: 0;
       border-bottom: 4px solid transparent;
+      border-left: 0;
     }
 
     img {
@@ -177,15 +183,15 @@ main {
 
   svg {
     display: inline-block;
-    vertical-align: middle;
     width: 28px;
     height: 28px;
     margin-right: 1rem;
+    vertical-align: middle;
     color: #fff;
 
     @media (min-width: $small) {
       display: block;
-      margin: 0 auto 0.5rem;
+      margin: 0 auto .5rem;
     }
   }
 
@@ -212,44 +218,46 @@ main {
   display: none;
 
   @media (max-width: $small - 1) {
-    display: block;
     position: absolute;
-    right: 1rem;
     top: 1rem;
+    right: 1rem;
+    display: block;
   }
 }
 
+.main-page {
+  transition: .5s;
+}
+
 .search {
-  display: flex;
+  display: none;
   margin-left: 1rem;
 }
 
 .search__toggle {
-  appearance: none;
   order: 1;
-  font-size: 0;
   width: 34px;
   height: 34px;
-  background: url('/img/search.svg') center right/22px no-repeat;
-  border: 0;
   color: #fff;
-  // display: none;
+  border: 0;
+  background: url('/img/search.svg') center right/22px no-repeat;
+  font-size: 0;
+  appearance: none;
+
 
   @media (min-width: $small) {
-    // border-left: 1px solid #979797;
     padding-left: 10px;
   }
 
   @media (max-width: $small - 1) {
     position: absolute;
+    top: .65rem;
     right: 5.5rem;
-    top: 0.65rem;
     background: url('/img/search.svg') center/22px no-repeat;
   }
 }
 
 .search__form {
-  //display: none;
   display: block;
 
   &.active {
@@ -258,10 +266,9 @@ main {
 
   @media (max-width: $small - 1) {
     position: absolute;
-    left: 0;
-    right: 0;
     top: 100%;
-    //display: none;
+    right: 0;
+    left: 0;
 
     input {
       width: 100%;
@@ -271,12 +278,12 @@ main {
   input {
     min-width: 400px;
     height: 33px;
-    appearance: none;
+    padding: .5rem;
     border: 0;
-    background-color: #373737;
     border-radius: 0;
+    background-color: #373737;
     font-size: 16px;
-    padding: 0.5rem;
+    appearance: none;
 
     @media (max-width: $small - 1) {
       border-bottom: 1px solid #979797;
@@ -295,7 +302,7 @@ main {
 .recently {
   display: flex;
   gap: 2rem;
-  padding: 4rem;
+  padding: 2rem 4rem 4rem;
 }
 
 .card {
@@ -306,12 +313,12 @@ main {
 
   &__image {
     position: absolute;
-    left: -1rem;
     top: -1rem;
-    transform: rotate(-3deg);
+    left: -1rem;
     flex-shrink: 0;
-    width: 200px;
-    height: 300px;
+    max-width: 13rem;
+    height: 20rem;
+    transform: rotate(-3deg);
   }
 
   &__empty {
@@ -321,53 +328,58 @@ main {
 
   &__info {
     display: flex;
+    gap: 1rem;
     flex-direction: column;
     padding: 2rem 1rem;
-    gap: 1rem;
   }
 
   h3,
   p {
     display: -webkit-box !important;
-    -webkit-line-clamp: 5;
+    overflow: hidden;
     -webkit-box-orient: vertical;
     white-space: normal;
-    overflow: hidden;
+
+    -webkit-line-clamp: 5;
   }
 
   h3 {
-    font-weight: 700;
-    font-size: 2rem;
+    height: 4rem;
     color: #fff;
-    -webkit-line-clamp: 1;
+    font-size: 2rem;
+    font-weight: 700;
+
+    -webkit-line-clamp: 2;
   }
 
   &__desc {
-    font-size: 0.75rem;
     color: #d2d2d2;
+    font-size: .75rem;
+
     -webkit-line-clamp: 5;
   }
 
   &__genre {
-    font-size: 0.75rem;
-    font-weight: 300;
-    color: #e2e2e2;
     text-align: center;
+    color: #e2e2e2;
+    font-size: .75rem;
+    font-weight: 300;
   }
 
   button {
     margin: 0 auto;
-    appearance: none;
-    border: 1px solid #ffffff;
-    background: transparent;
-    color: #fff;
     padding: 8px 16px;
+    cursor: pointer;
+    color: #fff;
+    border: 1px solid #fff;
+    background: transparent;
     font-size: 1rem;
     font-weight: 300;
-    cursor: pointer;
+
+    appearance: none;
 
     &:hover {
-      opacity: 0.5;
+      opacity: .5;
     }
 
     &:active {
@@ -381,73 +393,73 @@ main {
   }
 
   &_green {
-    background: rgba(113, 197, 244, 0.38);
-    box-shadow: 0px 6px 4px rgba(0, 0, 0, 0.25);
+    background: rgba(113, 197, 244, .38);
+    box-shadow: 0 6px 4px rgba(0, 0, 0, .25);
   }
 
   &_pink {
-    background: rgba(171, 113, 244, 0.38);
-    box-shadow: 0px 6px 4px rgba(0, 0, 0, 0.25);
+    background: rgba(171, 113, 244, .38);
+    box-shadow: 0 6px 4px rgba(0, 0, 0, .25);
   }
 }
 
 .search {
   .filter {
-    padding: 2rem;
     width: 30%;
-    background: #232222;
+    margin-right: 2rem;
+    padding: 2rem;
     border: 1px solid #393939;
     border-radius: 5px;
-    margin-right: 2rem;
+    background: #232222;
 
     &__inputs {
       display: flex;
-      flex-direction: column;
       gap: 1rem;
+      flex-direction: column;
     }
 
     h4 {
       position: relative;
       margin-bottom: 1rem;
-      font-weight: 700;
-      font-size: 1.25rem;
       color: #fff;
+      font-size: 1.25rem;
+      font-weight: 700;
 
       &::after {
-        content: "";
         position: absolute;
         bottom: -5px;
         left: 0;
         width: 50px;
         height: 2px;
+        content: '';
         background-color: #fff;
       }
     }
 
     label {
-      font-size: 1rem;
-      color: #fff;
       cursor: pointer;
+      color: #fff;
+      font-size: 1rem;
     }
 
   }
 
   .books {
-    width: 70%;
     display: flex;
-    flex-wrap: wrap;
     gap: 1rem;
+    flex-wrap: wrap;
+    width: 70%;
   }
 
   .book {
     width: 200px;
     height: 300px;
-    transition: .3s;
     cursor: pointer;
+    transition: .3s;
 
     &:hover {
       transform: scale(1.05);
-      box-shadow: 0 5px 30px 0 rgba(255, 255, 255, 0.5);
+      box-shadow: 0 5px 30px 0 rgba(255, 255, 255, .5);
     }
   }
 }
